ci: fix git ref

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -56,7 +56,7 @@ jobs:
             # of a naive rebase because the `home` branch might have changed, causing merge
             # conflicts.
             COMMIT_COUNT=$(git rev-list $MERGE_BASE..origin/$DEFAULT_BRANCH | wc -l)
-            git cherry-pick origin/$DEFAULT_BRANCH^$(($COMMIT_COUNT-1))..origin/$DEFAULT_BRANCH
+            git cherry-pick origin/$DEFAULT_BRANCH~$(($COMMIT_COUNT-1))..origin/$DEFAULT_BRANCH
 
             # Makes sure the updated local branch builds
             cargo build --all --all-targets
