--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,70 +1,39 @@
-name: Docker
+name: Build Docker Image
 
 on:
-  workflow_dispatch:
-  push:
-    tags:
-      - 'v*'
+  create:
 
 jobs:
-  update-docker-images:
-    runs-on: ubuntu-latest
+  build:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+    name: "Build"
+    runs-on: "ubuntu-latest"
+
+    env:
+      DOCKER_REPOSITORY: "starknet/pathfinder-firehose"
+
     steps:
-      - name: Free up space
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
+
+      - name: "Login to Docker Hub"
+        uses: "docker/login-action@v1.6.0"
+        with:
+          username: "${{ secrets.DOCKER_HUB_USERNAME }}"
+          password: "${{ secrets.DOCKER_HUB_PASSWORD }}"
+
+      - name: "Determine image version"
         run: |
-          echo "before freeing up space:"
-          df -h
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-          echo "after freeing up space:"
-          df -h
-      - name: Determine Docker image metadata
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: eqlabs/pathfinder
-          tags: |
-            type=semver,pattern={{raw}}
-            # NOTE: pre-release builds don't update `latest` tag, so we force-update that for pushed tags
-            type=raw,value=latest,enable=${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
-            # snapshot tag for manually triggered builds
-            type=raw,value=snapshot-{{branch}}-{{sha}},enable=${{ github.event_name == 'workflow_dispatch' }}
-      # Workaround for https://github.com/rust-lang/cargo/issues/8719
-      - name: Set Swap Space
-        uses: pierotofy/set-swap-space@v1.0
-        with:
-          swap-size-gb: 10
-      - name: Checkout sources
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v2
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          config-inline: |
-            [worker.oci]
-              max-parallelism = 4
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Build
-        id: docker_build
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: |
-            linux/amd64
-            linux/arm64
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          version_line="${{ github.ref }}"
+          regex="^refs\/tags\/v(.*)$"
+          [[ $version_line =~ $regex ]];
+          echo "VERSION=${BASH_REMATCH[1]}" >> $GITHUB_ENV
+
+      - name: "Build Docker image"
+        run: |
+          docker build -t ${DOCKER_REPOSITORY}:${VERSION} -f ./Dockerfile .
+
+      - name: "Push Docker image"
+        run: |
+          docker push ${DOCKER_REPOSITORY}:${VERSION}
