ci: install protoc

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,6 +32,10 @@ jobs:
         with:
           cache-on-failure: true
 
+      - name: "Install dependencies"
+        run: |
+          sudo apt-get install protobuf-compiler
+
       - name: "Config Git"
         run: |
           git config user.name "Jonathan LEI"
