--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,6 +13,14 @@ jobs:
       DEFAULT_BRANCH: "main"
 
     steps:
+      # https://github.com/actions/runner-images/issues/2840#issuecomment-790492173
+      - name: "Free up disk space"
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - name: "Checkout source code"
         uses: "actions/checkout@v3"
         with:
