fix: version variable in workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,7 +44,7 @@ jobs:
       - name: "Build Docker image"
         run: |
           docker buildx build \
-            --build-arg PATHFINDER_FORCE_VERSION="v${VERSION}" \
+            --build-arg PATHFINDER_FORCE_VERSION="v${{ needs.image-info.outputs.version }}" \
             --platform "linux/amd64" \
             -t ${DOCKER_REPOSITORY}:${{ needs.image-info.outputs.version }}-amd64 -f ./Dockerfile .
 
@@ -81,7 +81,7 @@ jobs:
       - name: "Build Docker image"
         run: |
           docker buildx build \
-            --build-arg PATHFINDER_FORCE_VERSION="v${VERSION}" \
+            --build-arg PATHFINDER_FORCE_VERSION="v${{ needs.image-info.outputs.version }}" \
             --platform "linux/arm64/v8" \
             --output=type=docker \
             -t ${DOCKER_REPOSITORY}:${{ needs.image-info.outputs.version }}-arm64 -f ./Dockerfile .
